Handle multiple configure events before configure aknowledgment

If multiple moveResize is called multiple times before its
configure event is acknowledged, new configure events will now
be sent instead of waiting for acknowledgement of the first.

BUG:489086

Co-authored-by: Niccolo Venerandi <niccolo@venerandi.com>